fixed view certificate alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,14 @@
   height: 50vmin;
 }
 
+body {
+  scroll-snap-type: y mandatory;
+}
+
+section {
+  scroll-snap-align: start;
+}
+
 @property --border-angle {
   syntax: "<angle>";
   inherits: true;
